Fix vertical alignment of navbar links

--- a/app/styles/view-specific/information/_all.scss
+++ b/app/styles/view-specific/information/_all.scss
@@ -14,6 +14,10 @@ $html-name-space:'.info-page';
     left: 0;
   }
 
+  .navbar-nav > li > a {
+    padding-top: 17px;
+  }
+
   .navbar-brand {
     font:{
       family: 'Merriweather', serif;
